Test/Networking/LogEvent.swift
//
//  LogEvent.swift
//  Test
//
//  Created by pablo luis velazquez zamudio on 19/06/23.
//

import Foundation

public enum FXLogEvent: String {
    case e = "[â€¼ï¸]" // error
    case i = "[â„¹ï¸]" // info
    case d = "[ðŸ’¬]" // debug
    case v = "[ðŸ”¬]" // verbose
    case w = "[âš ï¸]" // warning
    case s = "[ðŸ”¥]" // severe
}

final public class FXLog {

    public static var shared: FXLog = FXLog()

    private var print: ((_: Any, _: FXLogEvent) -> Void)?

    public func setLog(closure: @escaping ((_: Any, _: FXLogEvent) -> Void)) {
        self.print = closure
    }

    // MARK: - Loging methods
    /// Logs error messages on console with prefix [â€¼ï¸]
    ///
    /// - Parameters:
    ///   - object: Object or message to be logged
    ///   - filename: File name from where loggin to be done
    ///   - line: Line number in file from where the logging is done
    ///   - column: Column number of the log message
    ///   - funcName: Name of the function from where the logging is done
    public func e( _ object: Any, filename: String = #file, line: Int = #line, column: Int = #column, funcName: String = #function) {
        print?("\(Date().toString()) \(FXLogEvent.e.rawValue)[\(sourceFileName(filePath: filename))]:\(line) \(column) \(funcName) -> \(object)", FXLogEvent.e)
    }

    /// Logs info messages on console with prefix [â„¹ï¸]
    ///
    /// - Parameters:
    ///   - object: Object or message to be logged
    ///   - filename: File name from where loggin to be done
    ///   - line: Line number in file from where the logging is done
    ///   - column: Column number of the log message
    ///   - funcName: Name of the function from where the logging is done
    public func i ( _ object: Any, filename: String = #file, line: Int = #line, column: Int = #column, funcName: String = #function) {
        print?("\(Date().toString()) \(FXLogEvent.i.rawValue)[\(sourceFileName(filePath: filename))]:\(line) \(column) \(funcName) -> \(object)", FXLogEvent.i)
    }

    /// Logs debug messages on console with prefix [ðŸ’¬]
    ///
    /// - Parameters:
    ///   - object: Object or message to be logged
    ///   - filename: File name from where loggin to be done
    ///   - line: Line number in file from where the logging is done
    ///   - column: Column number of the log message
    ///   - funcName: Name of the function from where the logging is done
    public func d( _ object: Any, filename: String = #file, line: Int = #line, column: Int = #column, funcName: String = #function) {
        print?("\(Date().toString()) \(FXLogEvent.d.rawValue)[\(sourceFileName(filePath: filename))]:\(line) \(column) \(funcName) -> \(object)", FXLogEvent.d)
    }

    /// Logs messages verbosely on console with prefix [ðŸ”¬]
    ///
    /// - Parameters:
    ///   - object: Object or message to be logged
    ///   - filename: File name from where loggin to be done
    ///   - line: Line number in file from where the logging is done
    ///   - column: Column number of the log message
    ///   - funcName: Name of the function from where the logging is done
    public func v( _ object: Any, filename: String = #file, line: Int = #line, column: Int = #column, funcName: String = #function) {
        print?("\(Date().toString()) \(FXLogEvent.v.rawValue)[\(sourceFileName(filePath: filename))]:\(line) \(column) \(funcName) -> \(object)", FXLogEvent.v)
    }

    /// Logs warnings verbosely on console with prefix [âš ï¸]
    ///
    /// - Parameters:
    ///   - object: Object or message to be logged
    ///   - filename: File name from where loggin to be done
    ///   - line: Line number in file from where the logging is done
    ///   - column: Column number of the log message
    ///   - funcName: Name of the function from where the logging is done
    public func w( _ object: Any, filename: String = #file, line: Int = #line, column: Int = #column, funcName: String = #function) {
        print?("\(Date().toString()) \(FXLogEvent.w.rawValue)[\(sourceFileName(filePath: filename))]:\(line) \(column) \(funcName) -> \(object)", FXLogEvent.w)
    }

    /// Logs severe events on console with prefix [ðŸ”¥]
    ///
    /// - Parameters:
    ///   - object: Object or message to be logged
    ///   - filename: File name from where loggin to be done
    ///   - line: Line number in file from where the logging is done
    ///   - column: Column number of the log message
    ///   - funcName: Name of the function from where the logging is done
    public func s( _ object: Any, filename: String = #file, line: Int = #line, column: Int = #column, funcName: String = #function) {
        print?("\(Date().toString()) \(FXLogEvent.s.rawValue)[\(sourceFileName(filePath: filename))]:\(line) \(column) \(funcName) -> \(object)", FXLogEvent.s)
    }

    /// Extract the file name from the file path
    ///
    /// - Parameter filePath: Full file path in bundle
    /// - Returns: File Name with extension
    private func sourceFileName(filePath: String) -> String {
        let components = filePath.components(separatedBy: "/")
        return components.isEmpty ? "" : components.last!
    }
}

